--- a/cloudbuild-dev.yaml
+++ b/cloudbuild-dev.yaml
@@ -12,3 +12,8 @@ steps:
     args: 
       - "push"
       - "gcr.io/$PROJECT_ID/stedi-tests-jacobt:latest"
+  - name: "gcr.io/cloud-builders/docker"
+    id: Run
+    args:
+      - "run"
+      - "gcr.io/$PROJECT_ID/stedi-tests-jacobt:latest"
