--- a/cloudbuild-dev.yaml
+++ b/cloudbuild-dev.yaml
@@ -5,15 +5,15 @@ steps:
     args:
       - "build"
       - "-t"
-      - "gcr.io/$PROJECT_ID/stedi-tests-jacobt:latest"
+      - "gcr.io/$PROJECT_ID/stedi-jacobt:latest"
       - "."
   - name: "gcr.io/cloud-builders/docker"
     id: Push
     args: 
       - "push"
-      - "gcr.io/$PROJECT_ID/stedi-tests-jacobt:latest"
+      - "gcr.io/$PROJECT_ID/stedi-jacobt:latest"
   - name: "gcr.io/cloud-builders/docker"
     id: Run
     args:
       - "run"
-      - "gcr.io/$PROJECT_ID/stedi-tests-jacobt:latest"
+      - "gcr.io/$PROJECT_ID/stedi-jacobt:latest"
