--- a/manifest.yaml
+++ b/manifest.yaml
@@ -38,7 +38,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: jacobt-stedi
+  name: jacobt-stedi-loadbalancer
 spec:
   selector:
     app: jacobt-stedi
