--- a/cloudbuild-dev.yaml
+++ b/cloudbuild-dev.yaml
@@ -12,6 +12,14 @@ steps:
     args: 
       - "push"
       - "gcr.io/$PROJECT_ID/stedi-jacobt:latest"
+  - name: "gcr.io/cloud-builders/gke-deploy"
+    id: Deploy
+    args:
+    - run
+    - --filename=manifest.yaml
+    - --image=gcr.io/$PROJECT_ID/stedi-jacobt:latest
+    - --location=us-west1-b
+    - --cluster=cluster-2
   - name: "gcr.io/cloud-builders/docker"
     id: Run
     args:
