--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./web/build/index.js",
     "test": "mocha"
   },
   "repository": {
@@ -18,6 +17,7 @@
   },
   "homepage": "https://github.com/JacobTapp23/CIT262#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mocha": "^9.2.2",
     "node-fetch": "^3.2.4"
