fix for cloubuild

--- a/cloudbuild-dev.yaml
+++ b/cloudbuild-dev.yaml
@@ -20,6 +20,10 @@ steps:
       - --image=gcr.io/$PROJECT_ID/stedi-jacobt:latest
       - --location=us-west1-b
       - --cluster=cluster-2
+  - name: "gcr.io/cloud-builders/npm"
+    args: ["install"]
+  - name: "gcr.io/cloud-builders/npm"
+    args: ["readiness"]
   - name: "gcr.io/cloud-builders/docker"
     id: Test
     args:
