--- a/cloudbuild-dev.yaml
+++ b/cloudbuild-dev.yaml
@@ -23,7 +23,7 @@ steps:
   - name: "gcr.io/cloud-builders/npm"
     args: ["install"]
   - name: "gcr.io/cloud-builders/npm"
-    args: ["readiness"]
+    args: ["run","readiness"] 
   - name: "gcr.io/cloud-builders/docker"
     id: Test
     args:
